# TeamsUp

./: .gitingnore  README.md  codecov.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: blank.yml  codeql-analysis.yml  frontend.yml  pylint.yml
backend/: .gitignore  README.md  database.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2c668d7a3e40_create_database.py  3d4f0e46fb70_init_database.py  91c16058d5bd_init_database.py  9d088dc429e6_create_database.py  a219f2ee97cb_init_database.py  c4c3f3708787_init_database.py  cf7cf3ea013c_setup_database.py  d6647097f6cb_init_database.py  e171f09bbcba_setup_database.py
backend/src/app/: app.py
backend/src/app/exceptions/: handler.py  nomorecards.py  wrongplayer.py
backend/src/app/logic/: cards.py  games.py  players.py  teams.py
backend/src/app/routers/games/: __init__.py  games.py
backend/src/app/routers/games/cards/: cards.py
backend/src/app/routers/games/teams/: teams.py
backend/src/app/routers/games/teams/players/: players.py
backend/src/app/routers/players/: players.py
backend/src/database/: database.py  engine.py  exceptions.py  models.py
backend/src/database/crud/: card.py  game.py  player.py  team.py
backend/src/database/schemas/: card.py  game.py  player.py  team.py  utils.py
backend/tests/: app_test.py  conftest.py  test_app.py
backend/tests/test_app/: test_app.py
backend/tests/test_app/test_logic/: test_games.py  test_players.py
backend/tests/test_app/test_routers/test_games/: test_games.py
backend/tests/test_app/test_routers/test_games/test_cards/: test_cards.py
backend/tests/test_app/test_routers/test_games/test_teams/: test_teams.py
backend/tests/test_app/test_routers/test_games/test_teams/test_players/: test_players.py
backend/tests/test_app/test_routers/test_players/: test_players.py
backend/tests/test_database/test_crud/: test_card.py  test_game.py  test_player.py  test_team.py
backend/tests/utils/authorization/: auth_client.py
frontend/: jest.config.ts  package.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/games/: GameCard.test.tsx  GameCard.tsx  GameList.test.tsx  GameLobby.tsx  GamesList.tsx
frontend/src/components/games/states/: CarouselComponent.tsx  GameComponent.tsx  GameLobby.test.tsx  GameLobby.tsx  Timer.tsx
frontend/src/components/home/: Home.test.tsx  Home.tsx  NavBar.test.tsx  NavBar.tsx
frontend/src/components/players/: PlayersCreate.test.tsx  PlayersCreate.tsx  PlayersInfo.test.tsx  PlayersInfo.tsx  PlayersLogin.test.tsx  PlayersLogin.tsx
frontend/src/data/enums/: local-storage.ts
frontend/src/data/interfaces/: cards.ts  games.ts  index.ts  player.ts  teams.ts
frontend/src/players/: PlayersInfo.tsx  PlayersLogin.tsx
frontend/src/utils/api/: api.test.ts  api.ts  cards.test.ts  cards.ts  games.test.ts  games.ts  index.ts  player.test.ts  player.ts  teams.test.ts  teams.ts
frontend/src/utils/local-storage.ts/: auth.test.ts  auth.ts
frontend/src/views/: Gamescreen.tsx  Homescreen.tsx
