[tool.poetry]
name = "backend"
version = "0.0.1"
description = ""
authors = ["Ward Meersman <wardmeersman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
alembic = "^1.12.1"
coverage = "^7.3.2"
SQLAlchemy = "^1.4.50"
pyhumps = "^3.8.0"
aiosqlite = "^0.19.0"
httpx = "^0.25.1"
aiohttp = "^3.8.6"
PyJWT = "^2.8.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
environs = "^9.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.4"
pylint = "^3.0.2"
sqlalchemy2-stubs = "^0.0.2a37"
pytest-asyncio = "^0.21.1"

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = "sqlalchemy_utils"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pyhumps"
ignore_errors = true

[[tool.mypy.overrides]]
module = "jose.*"
ignore_missing_imports = true

[tool.pylint.master]
extension-pkg-whitelist = "pydantic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:.*The distutils package is deprecated:DeprecationWarning",
]

[tool.coverage.run]
omit = [
    "alembic/*",
    "tests/*"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"