[tool.poetry]
name = "backend"
version = "0.0.1"
description = ""
authors = ["Ward Meersman <wardmeersman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
uvicorn = "^0.24.0"
alembic = "^1.13.0"
coverage = "^7.3.2"
SQLAlchemy = {extras = ["mypy"], version = "^2.0.23"}
pyhumps = "^3.8.0"
aiosqlite = "^0.19.0"
httpx = "^0.25.2"
aiohttp = "^3.9.1"
PyJWT = "^2.8.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
environs = "^9.5.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
types-passlib = "^1.7.7.13"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.7"
pylint = "^3.0.2"
pytest-asyncio = "^0.23.2"

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = "sqlalchemy_utils"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pyhumps"
ignore_errors = true

[[tool.mypy.overrides]]
module = "jose.*"
ignore_missing_imports = true

[tool.pylint.master]
extension-pkg-whitelist = "pydantic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:.*The distutils package is deprecated:DeprecationWarning",
]

[tool.coverage.run]
omit = [
    "alembic/*",
    "tests/*"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"